# utilx

./: .gitignore  .gitmodules  CMakeLists.txt  docs.doxy  readme.md
docs/: modules.inl
include/utilx/: chrono_ostream.hpp  circle_buffer.hpp  circle_vector.hpp  finally.hpp  fixed_point.hpp  fixed_point_glm.hpp  make_unique.hpp  noexcept.hpp  pair_hash.hpp  thread_pool.hpp  uid.hpp  vector.hpp  visitor_pattern.hpp
src/: CMakeLists.txt  thread_pool.cpp
tests/: circle_vector_test.cpp  finnaly_test.cpp  fixed_point_glm_test.cpp  fixed_point_test.cpp  pair_hash_test.cpp  vector_test.cpp  visitor_pattern_test.cpp
